--- a/adminDashboard/html/revenue-report/transaction.html
+++ b/adminDashboard/html/revenue-report/transaction.html
@@ -24,8 +24,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/sidebar.css">
-    <link rel="stylesheet" href="/css/paymentList.css">
+    <link rel="stylesheet" href="../../css/sidebar.css">
+    <link rel="stylesheet" href="../../css/paymentList.css">
 </head>
 <body>
     <!-- Sidebar Include -->
@@ -34,27 +34,7 @@
     <!-- Main Content -->
     <div class="main-content" id="mainContent">
         <!-- Top Bar -->
-        <div class="top-bar">
-            <div class="d-flex align-items-center">
-                <button class="toggle-sidebar me-3" onclick="toggleSidebar()">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <h4 class="mb-0"><i class="fas fa-money-check-alt me-2"></i>Quản lý giao dịch</h4>
-            </div>
-            <div class="d-flex align-items-center">
-                <div class="dropdown">
-                    <button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-                        <i class="fas fa-user-circle me-2"></i>Admin
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-user me-2"></i>Hồ sơ</a></li>
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-cog me-2"></i>Cài đặt</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#" onclick="handleLogout()"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        <div id="topbar-container"></div>
 
         <!-- Payment Management Content -->
         <div class="container-fluid p-4">
@@ -212,7 +192,8 @@
 
     <!-- Custom JS -->
     <script src="/js/fetch-api.js"></script>
-    <script src="/js/sidebar.js"></script>
+    <script src="../../js/sidebar.js"></script>
+     <script src="../../js/topbar.js"></script>
     <script>
         let currentPage = 0;
         const pageSize = 10;
@@ -222,7 +203,7 @@
 
         async function loadSidebar() {
             try {
-                const response = await fetch('/components/sidebar.html');
+                const response = await fetch('../../components/sidebar.html');
                 if (!response.ok) throw new Error('Không thể tải sidebar');
                 const sidebarHtml = await response.text();
                 document.getElementById('sidebar-container').innerHTML = sidebarHtml;
@@ -574,6 +555,7 @@
         }
 
         document.addEventListener('DOMContentLoaded', () => {
+            loadTopbar();
             loadSidebar();
             initPeriodFromQueryParams();
             updateData();
