--- a/adminDashboard/html/staff-manager/edit-staff.html
+++ b/adminDashboard/html/staff-manager/edit-staff.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FoodHub Admin - Chỉnh sửa khách hàng</title>
+    <title>FoodHub Admin - Chỉnh sửa người dùng</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta name="description">
@@ -24,8 +24,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/sidebar.css">
-    <link rel="stylesheet" href="/css/edit-staff.css">
+    <link rel="stylesheet" href="../../css/sidebar.css">
+    <link rel="stylesheet" href="../../css/edit-staff.css">
 
     <!-- Goong Map JavaScript SDK -->
     <script src="https://maps.goong.io/maps/api/js?key=rGKoYBLI4tMjBe2tkthJ3vY1AAfTLHu6h7wVxaWF"></script>
@@ -52,7 +52,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    Bạn có chắc chắn muốn lưu các thay đổi cho khách hàng này?
+                    Bạn có chắc chắn muốn lưu các thay đổi cho người dùng này?
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
@@ -63,10 +63,10 @@
     </div>
 
     <div class="container">
-        <!-- Original Customer Info Card -->
+        <!-- Original User Info Card -->
         <div class="card mb-4">
             <div class="card-header">
-                <h5><i class="fas fa-info-circle me-2"></i>Thông tin khách hàng hiện tại</h5>
+                <h5><i class="fas fa-info-circle me-2"></i>Thông tin người dùng hiện tại</h5>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
@@ -75,6 +75,7 @@
                             <tr>
                                 <th>Tên đăng nhập</th>
                                 <th>Email</th>
+                                <th>Vai trò</th>
                                 <th>Trạng thái</th>
                                 <th>Địa chỉ</th>
                                 <th>Số điện thoại</th>
@@ -84,6 +85,7 @@
                             <tr>
                                 <td id="original-username"></td>
                                 <td id="original-email"></td>
+                                <td id="original-roleName"></td>
                                 <td id="original-status"></td>
                                 <td id="original-address"></td>
                                 <td id="original-phone"></td>
@@ -94,13 +96,13 @@
             </div>
         </div>
 
-        <!-- Edit Customer Card -->
+        <!-- Edit User Card -->
         <div class="card">
             <div class="card-header">
-                <h5><i class="fas fa-edit me-2"></i>Chỉnh sửa thông tin khách hàng</h5>
+                <h5><i class="fas fa-edit me-2"></i>Chỉnh sửa thông tin người dùng</h5>
             </div>
             <div class="card-body">
-                <form id="editCustomerForm" class="row g-3" autocomplete="off">
+                <form id="editUserForm" class="row g-3" autocomplete="off">
                     <input type="hidden" id="userId" name="id">
 
                     <div class="col-md-6">
@@ -114,6 +116,15 @@
                         <label for="email" class="form-label">Email</label>
                         <input type="email" class="form-control" id="email" name="email"
                                autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label for="roleName" class="form-label">Vai trò</label>
+                        <select class="form-select" id="roleName" name="roleName" required>
+                            <option value="CASHIER">CASHIER</option>
+                            <option value="CHEF">CHEF</option>
+                            <option value="WAITER">WAITER</option>
+                        </select>
                     </div>
 
                     <div class="col-md-6">
@@ -162,10 +173,11 @@
 <!-- Bootstrap JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script src="/js/fetch-api.js"></script>
-<script src="/js/sidebar.js"></script>
+<script src="../../js/sidebar.js"></script>
+<script src="../../js/topbar.js"></script>
 <script>
     // Lưu trữ dữ liệu ban đầu
-    let originalCustomerData = {};
+    let originalUserData = {};
 
     // Lấy tham số id từ URL
     function getQueryParam(param) {
@@ -176,7 +188,7 @@
     // Tải sidebar
     async function loadSidebar() {
         try {
-            const response = await fetch('/components/sidebar.html');
+            const response = await fetch('../../components/sidebar.html');
             if (!response.ok) throw new Error('Không thể tải sidebar');
             const sidebarHtml = await response.text();
             document.getElementById('sidebar-container').innerHTML = sidebarHtml;
@@ -188,43 +200,46 @@
         }
     }
 
-    // Lấy thông tin khách hàng
-    async function fetchCustomerDetails(id) {
+    // Lấy thông tin người dùng
+    async function fetchUserDetails(id) {
         try {
             const response = await apiFetch(`/users/${id}`, { method: 'GET' });
             if (response.result) {
-                const customer = response.result;
-                originalCustomerData = {
-                    id: customer.id,
-                    username: customer.username || '',
-                    email: customer.email || '',
-                    status: customer.status || 'ACTIVE',
-                    address: customer.address || '',
-                    phone: customer.phone || '',
+                const user = response.result;
+                originalUserData = {
+                    id: user.id,
+                    username: user.username || '',
+                    email: user.email || '',
+                    roleName: user.roleName?.name || 'ADMIN',
+                    status: user.status || 'ACTIVE',
+                    address: user.address || '',
+                    phone: user.phone || '',
                     password: ''
                 };
                 // Populate edit form
-                document.getElementById('userId').value = customer.id;
-                document.getElementById('username').value = customer.username || '';
-                document.getElementById('email').value = customer.email || '';
-                document.getElementById('status').value = customer.status || 'ACTIVE';
-                document.getElementById('address').value = customer.address || '';
-                document.getElementById('phone').value = customer.phone || '';
+                document.getElementById('userId').value = user.id;
+                document.getElementById('username').value = user.username || '';
+                document.getElementById('email').value = user.email || '';
+                document.getElementById('roleName').value = user.roleName?.name || 'ADMIN';
+                document.getElementById('status').value = user.status || 'ACTIVE';
+                document.getElementById('address').value = user.address || '';
+                document.getElementById('phone').value = user.phone || '';
                 document.getElementById('password').value = '';
 
                 // Populate original info table
-                document.getElementById('original-username').textContent = originalCustomerData.username || '-';
-                document.getElementById('original-email').textContent = originalCustomerData.email || '-';
-                document.getElementById('original-status').textContent = originalCustomerData.status || '-';
-                document.getElementById('original-address').textContent = originalCustomerData.address || '-';
-                document.getElementById('original-phone').textContent = originalCustomerData.phone || '-';
+                document.getElementById('original-username').textContent = originalUserData.username || '-';
+                document.getElementById('original-email').textContent = originalUserData.email || '-';
+                document.getElementById('original-roleName').textContent = originalUserData.roleName || '-';
+                document.getElementById('original-status').textContent = originalUserData.status || '-';
+                document.getElementById('original-address').textContent = originalUserData.address || '-';
+                document.getElementById('original-phone').textContent = originalUserData.phone || '-';
 
                 disableAutocomplete();
             } else {
-                throw new Error('Không thể tải thông tin khách hàng!');
+                throw new Error('Không thể tải thông tin người dùng!');
             }
         } catch (error) {
-            showNotification(error.message || 'Có lỗi xảy ra khi tải thông tin khách hàng!', 'error');
+            showNotification(error.message || 'Có lỗi xảy ra khi tải thông tin người dùng!', 'error');
         }
     }
 
@@ -240,14 +255,12 @@
         });
     }
 
-    // Cập nhật thông tin khách hàng
-    async function updateCustomer(id, data) {
+    // Cập nhật thông tin người dùng
+    async function updateUser(id, data) {
         try {
             if (!data.password || data.password.trim() === '') {
                 delete data.password;
             }
-            // Cố định roleName là CUSTOMER
-            data.roleName = 'CUSTOMER';
 
             const response = await apiFetch(`/users/${id}`, {
                 method: 'PUT',
@@ -255,16 +268,17 @@
                 body: JSON.stringify(data)
             });
             if (response.code === 1000) {
-                showNotification('Cập nhật thông tin khách hàng thành công!', 'success');
-                originalCustomerData = { ...data, id };
+                showNotification('Cập nhật thông tin người dùng thành công!', 'success');
+                originalUserData = { ...data, id };
                 document.getElementById('original-username').textContent = data.username || '-';
                 document.getElementById('original-email').textContent = data.email || '-';
+                document.getElementById('original-roleName').textContent = data.roleName || '-';
                 document.getElementById('original-status').textContent = data.status || '-';
                 document.getElementById('original-address').textContent = data.address || '-';
                 document.getElementById('original-phone').textContent = data.phone || '-';
                 setTimeout(() => goBack(), 1500);
             } else {
-                throw new Error(response.message || 'Lỗi khi cập nhật thông tin khách hàng!');
+                throw new Error(response.message || 'Lỗi khi cập nhật thông tin người dùng!');
             }
         } catch (error) {
             const errorMessage = error.message || 'Có lỗi xảy ra khi cập nhật!';
@@ -281,12 +295,13 @@
     // Khôi phục thông tin gốc
     function restoreForm() {
         if (confirm('Bạn có chắc chắn muốn khôi phục thông tin gốc?')) {
-            document.getElementById('username').value = originalCustomerData.username;
-            document.getElementById('email').value = originalCustomerData.email;
-            document.getElementById('status').value = originalCustomerData.status;
-            document.getElementById('address').value = originalCustomerData.address;
-            document.getElementById('phone').value = originalCustomerData.phone;
-            document.getElementById('password').value = originalCustomerData.password;
+            document.getElementById('username').value = originalUserData.username;
+            document.getElementById('email').value = originalUserData.email;
+            document.getElementById('roleName').value = originalUserData.roleName;
+            document.getElementById('status').value = originalUserData.status;
+            document.getElementById('address').value = originalUserData.address;
+            document.getElementById('phone').value = originalUserData.phone;
+            document.getElementById('password').value = originalUserData.password;
             document.getElementById('username').classList.remove('is-invalid');
             document.getElementById('username-error').textContent = '';
             showNotification('Đã khôi phục thông tin gốc!', 'success');
@@ -308,7 +323,7 @@
 
     // Quay lại danh sách
     function goBack() {
-        window.location.href = '/customer-manager/customerList.html';
+        window.location.href = 'staffList.html';
     }
 
     // Toggle hiển thị mật khẩu
@@ -385,11 +400,11 @@
     document.addEventListener('DOMContentLoaded', () => {
         const id = getQueryParam('id');
         if (!id) {
-            showNotification('Không tìm thấy ID khách hàng!', 'error');
+            showNotification('Không tìm thấy ID người dùng!', 'error');
             setTimeout(() => goBack(), 2000);
             return;
         }
-
+        loadUserInfo(); 
         loadSidebar();
         disableAutocomplete();
         document.querySelectorAll('input').forEach(input => {
@@ -398,19 +413,20 @@
             }
         });
 
-        fetchCustomerDetails(id);
+        fetchUserDetails(id);
         setupAddressAutocomplete();
 
         document.getElementById('confirmUpdateBtn').addEventListener('click', () => {
             const formData = {
                 username: document.getElementById('username').value.trim(),
                 email: document.getElementById('email').value.trim(),
+                roleName: document.getElementById('roleName').value,
                 status: document.getElementById('status').value,
                 address: document.getElementById('address').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
                 password: document.getElementById('password').value.trim()
             };
-            updateCustomer(id, formData);
+            updateUser(id, formData);
             const modal = bootstrap.Modal.getInstance(document.getElementById('confirmUpdateModal'));
             modal.hide();
         });
