--- a/home-page/html/login.html
+++ b/home-page/html/login.html
@@ -302,7 +302,7 @@
         const payload = parseJwt(token);
         const scopes = payload?.scope?.split(" ");
             if (scopes.includes("ROLE_ADMIN")) {
-                window.location.href = '/menu-manager/menu.html';
+                window.location.href = '/adminDashboard/adminDashboard.html';
             } else if (scopes.includes("ROLE_WAITER")) {
                 window.location.href = '../../waiter/index.html';
             }else if (scopes.includes("ROLE_CHEF")) {
