--- a/chef/index.html
+++ b/chef/index.html
@@ -143,7 +143,7 @@
       <div class="orders-recent-section" id="dashboardOrdersSection">
         <div class="d-flex justify-content-between align-items-center mb-3">
           <h5 class="mb-0">
-            <i class="fas fa-clipboard-list me-2"></i>
+            <i class="fas fa-clipboard-list me-2" style="color: var(--primary)"></i>
             Đơn hàng gần đây
           </h5>
           <div class="d-flex gap-2">
@@ -1066,23 +1066,41 @@
     }
 
     function formatDateTime(dateString) {
-      // Parse the date string as UTC to avoid timezone conversion
-      const date = new Date(dateString);
+      console.log("date string: ", dateString);
+
+      // Remove 'Z' suffix if present and treat as local time
+      const cleanDateString = dateString.replace('Z', '');
+      const date = new Date(cleanDateString);
       const now = new Date();
 
-      // Calculate difference using UTC time to avoid timezone issues
+      // Calculate difference in milliseconds
       const diffMs = now.getTime() - date.getTime();
       const diffMins = Math.floor(diffMs / 60000);
       const diffHours = Math.floor(diffMs / 3600000);
       const diffDays = Math.floor(diffMs / 86400000);
 
-      // Format time part - no timezone conversion needed since dateString is already Vietnam time
+      // Format time part
       const timeStr = date.toLocaleTimeString('vi-VN', {
         hour: '2-digit',
-        minute: '2-digit',
-        timeZone: 'UTC' // Treat as UTC to prevent double timezone conversion
+        minute: '2-digit'
       });
 
+      // Handle future dates (when date is in the future)
+      if (diffMs < 0) {
+        const absDiffMins = Math.abs(diffMins);
+        const absDiffHours = Math.abs(diffHours);
+        const absDiffDays = Math.abs(diffDays);
+
+        if (absDiffMins < 60) {
+          return `Trong ${absDiffMins} phút`;
+        } else if (absDiffHours < 24) {
+          return `Trong ${absDiffHours} giờ (${timeStr})`;
+        } else {
+          return `Trong ${absDiffDays} ngày (${timeStr})`;
+        }
+      }
+
+      // Handle past dates (normal case)
       if (diffMins < 1) {
         return 'Vừa xong';
       } else if (diffMins < 60) {
@@ -1095,8 +1113,7 @@
         return date.toLocaleDateString('vi-VN', {
           day: '2-digit',
           month: '2-digit',
-          year: 'numeric',
-          timeZone: 'UTC' // Treat as UTC to prevent double timezone conversion
+          year: 'numeric'
         }) + ` ${timeStr}`;
       }
     }
