--- a/customer/order-confirmation.html
+++ b/customer/order-confirmation.html
@@ -17,7 +17,11 @@
         <div class="header">
             <div class="header-left">
                 <button class="back-btn" onclick="goToHome()">
-                    <i class="fas fa-home"></i>
+                    <svg viewBox="0 0 24 24" fill="none"
+                            style="width: 24px; height: 24px; fill: none; stroke: #ff6b35; stroke-width: 2; stroke-linejoin: round; stroke-linecap: round;">
+                            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
+                            <polyline points="9,22 9,12 15,12 15,22" />
+                        </svg>
                 </button>
                 <div class="logo">🍽️</div>
                 <div class="header-title">
@@ -103,7 +107,7 @@
     <script src="js/backend-url.js"></script>
     <script src="js/order-confirmation.js"></script>
         
-    </script>
+    </scrip>
 </body>
 
 </html>
