--- a/waiter/index.html
+++ b/waiter/index.html
@@ -1596,6 +1596,7 @@
                             disableAllShiftButtons();
                             updateShiftStatusDisplay(shiftLog);
                         } else {
+                            initializeWebSocket(currentWorkSchedule);
                             // User has checked in but not checked out - show check-out button active, check-in disabled
                             showCheckOutButton();
                             updateShiftStatusDisplay(shiftLog);
