--- a/home-page/html/menu.html
+++ b/home-page/html/menu.html
@@ -529,7 +529,6 @@
             background: #ffffff;
             border-radius: 12px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-            display: flex;
             flex-direction: column;
             border: 1px solid #e0e0e0;
             z-index: 1060;
@@ -543,6 +542,7 @@
         }
 
         .chat-container.hidden {
+            display: none;
             transform: translateY(20px);
             opacity: 0;
         }
@@ -856,7 +856,7 @@
     <div id="chat-toggle" onclick="try { toggleChat(); } catch(e) { console.error('Error toggling chat:', e); showNotification('Lỗi khi mở/đóng chat: ' + e.message); }">💬</div>
 
     <!-- Chat Window -->
-    <div id="chat-container" class="chat-container">
+    <div id="chat-container" class="chat-container hidden">
         <div class="chat-header">
             <span>FoodHub Chat</span>
             <button onclick="try { toggleChat(); } catch(e) { console.error('Error toggling chat:', e); showNotification('Lỗi khi đóng chat: ' + e.message); }">✕</button>
@@ -945,6 +945,25 @@
             } catch (error) {
                 console.error('Error updating cart badge:', error);
                 document.getElementById('cart-count').textContent = '0';
+            }
+        }
+
+        // Toggle chat visibility
+        function toggleChat() {
+            try {
+                const chatContainer = document.getElementById('chat-container');
+                if (!chatContainer) {
+                    throw new Error('Chat container not found');
+                }
+                const isHidden = chatContainer.classList.contains('hidden');
+                chatContainer.classList.toggle('hidden', !isHidden);
+                chatContainer.classList.toggle('show', isHidden);
+                console.log('Chat toggled:', isHidden ? 'shown' : 'hidden');
+            } catch (error) {
+                console.error('Error in toggleChat:', error);
+                if (typeof showNotification === 'function') {
+                    showNotification('Lỗi khi mở/đóng chat: ' + error.message);
+                }
             }
         }
 
@@ -1377,6 +1396,13 @@
         // Initialize page
         document.addEventListener('DOMContentLoaded', () => {
             try {
+                // Ensure chat is hidden on page load
+                const chatContainer = document.getElementById('chat-container');
+                if (chatContainer) {
+                    chatContainer.classList.add('hidden');
+                    chatContainer.classList.remove('show');
+                }
+
                 if (typeof updateUI === 'function') updateUI();
                 fetchCategories();
                 if (typeof fetchUserOrders === 'function' && typeof startPolling === 'function') {
